--- a/Features.html
+++ b/Features.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Applight Template By W3 Template</title>
+<title>Features</title>
+<link rel="icon" type="image/png" href="C:\Users\oussa\Downloads\Applight\Brief1\images\favicon.png">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -16,22 +17,33 @@
 <body>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
-  <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <img src="images/logo.png" alt="logo" class="logo-1"> </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="fas fa-bars"></span> </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item"> <a class="nav-link" href="" data-scroll-nav="0">Home</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="1">About</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="2">Features</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="3">Team</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="4">Testimonials</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="5">Faq</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="6">Contact</a> </li>
-      </ul>
-    </div>
+  <div class="container">
+      <!-- Logo for Larger Screens -->
+      <a class="navbar-brand navbar-logo d-none d-lg-block" href="#">
+          <img src="images/logo.png" alt="logo" class="logo">
+      </a>
+      <!-- Logo for Smaller Screens -->
+      <a class="navbar-brand navbar-logo d-block d-lg-none" href="#">
+          <img src="images/logo-black.png" alt="logo-black" class="logo-black">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="fas fa-bars"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item"> <a class="nav-link" href="index.html" target="_blank">Home</a> </li>
+              <li class="nav-item"> <a class="nav-link" href="About.html" target="_blank">About</a> </li>
+              <li class="nav-item"> <a class="nav-link" href="Features.html" target="_blank">Features</a> </li>
+              <li class="nav-item"> <a class="nav-link" href="index.html" data-scroll-nav="3">Team</a> </li>
+              <li class="nav-item"> <a class="nav-link" href="index.html" data-scroll-nav="4">Testimonials</a> </li>
+              <li class="nav-item"> <a class="nav-link" href="index.html" data-scroll-nav="5">Faq</a> </li>
+              <li class="nav-item"> <a class="nav-link" href="Contact.html" target="_blank">Contact</a> </li>
+          </ul>
+      </div>
   </div>
 </nav>
-<!-- End Navbar --> 
+<!-- End Navbar -->
 
 <!-------Features Start------->
 <section class="feature section-padding" data-scroll-index='2'>
@@ -101,6 +113,30 @@
   </div>
 </section>
 <!-------Features End-------> 
+<!-------Download End------->
+<section class="download section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sectioner-header text-center white">
+          <h3>Download Our App</h3>
+          <span class="line"></span>
+          <p class="white">Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <div class="section-content text-center">
+          <ul>
+            <li><a href="#"><img src="images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
+            <li><a href="#"><img src="images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-------Download End------->
 
 
 <footer class="footer-copy">
